# vanier-ceramic-shop

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
.github/workflow/: actions.yml
.github/workflows/: actions.yml
Documentation/Final Website/Project Management/: project_kanban
Documentation/previous project/: index.html
account/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: account.html  billing.html  login.html  logout.html  registration.html  shipping.html  wishlist.html
cart/: context_processors.py  helpers.py  models.py  tests.py  urls.py  validation.py  views.py  webhooks.py
cart/migrations/: 0001_initial.py
cart/templates/cart/: cancel.html  cart.html  (+3 more)
contact/: apps.py  models.py  tests.py  urls.py  views.py
contact/migrations/: 0001_initial.py
inventory/: apps.py
main/: asgi.py  settings.py  urls.py  wsgi.py
main/settings/: __init__.py  base.py  development.py  production.py
mediafiles/: collection_curvy_zC9SsDi.avif  product_curvy_01.avif
portfolio/: portfolio-img-1.avif  portfolio-img-2.avif  portfolio-img-3.avif  portfolio-img-4.avif  portfolio-img-5.avif  portfolio.json
shop/: apps.py  context_processors.py  models.py  settings.py  tests.py  urls.py  views.py
shop/migrations/: 0001_initial.py
static/images/: about-portrait.avif  about-statement.avif  about-teaser-img.avif  home-hero-img.avif
templates/: about.html  base.html  home.html
templates/partials/: footer.html  nav.html
(+22 files in other folders)
