[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.30",
    "dj-database-url[postgres]>=3.1.0",
    "django>=5.2.8",
    "django-storages>=1.14.6",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "stripe>=14.0.1",
    "whitenoise>=6.11.0",
]
